-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.9.2, 0.9.3
-
Fix Version/s: 0.9.3
-
Component/s: C++ - Compiler
-
Labels:None
I work on one project that has been using thrift-0.8.0 and I am updating it to 0.9.3. The project defines streaming operators for "operator <<" on a variety of thrift-generated types.
The fix added in THRIFT-2067 provides similar but not identical functionality however it was done in a way that cannot be overridden, and this causes projects upgrading from versions prior to 0.9.2 with their own streaming operators to fail to compile.
One way to make the streaming operator virtual is to follow the example provided in http://stackoverflow.com/questions/5189614/operator-and-inheritance
- breaks
-
THRIFT-4060 Thrift printTo ostream overload mechanism breaks down when types are nested
-
- Closed
-
- is broken by
-
THRIFT-2067 Thrift objects should have a default string representation
-
- Closed
-