THRIFT-3336: eliminate extraneous ostream operators in generated code; provide an overridable ostream implementation